[tool.poetry]
name = "1-homework"
version = "0.1.0"
description = ""
authors = ["Nikita Khramov <nikuser12321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
mypy = "^1.11.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
  )/
)
'''

[tool.isort]
line_length = 119
